--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "test": "vitest run",
+    "test:ui": "vitest"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -21,10 +23,14 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/node": "^22.9.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "jsdom": "^25.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "^5.6.3",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vitest": "^2.0.5"
   },
   "pnpm": {
     "overrides": {}
